tests/reject/single_binder_let.alg
sort S : Sort;
eq bad(x : S) let (a) = x in a = x;
